--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -127,6 +127,11 @@ config SENSORS_ADCXX
 	  This driver can also be built as a module.  If so, the module
 	  will be called adcxx.
 
+config NUBIA_LIQUID_LED
+	tristate "aw9106b i2c led"
+	depends on I2C
+	help
+	  if you say use aw9106b, select it.
 config SENSORS_ADM1021
 	tristate "Analog Devices ADM1021 and compatibles"
 	depends on I2C
@@ -1577,6 +1582,60 @@ config SENSORS_MC13783_ADC
         help
           Support for the A/D converter on MC13783 and MC13892 PMIC.
 
+config NUBIA_SENSORS_COMPASS_AKM09911
+	tristate "AKM09911"
+	depends on I2C
+	help
+	  If you say yes here you get support for AKM's
+	  compass AKM09911
+config NUBIA_SENSORS_TMD2772
+	tristate "TMD2772 device driver"
+	depends on I2C
+	help
+	  If you say yes here you get support for AMS's
+	  als ps TMD2772
+config NUBIA_SENSORS_HALL_DEVICE
+	tristate "hall devicedriver"
+	help
+	  If you say yes here you get support for
+	  hall device
+menuconfig NUBIA_SENSORS_LSM6DX0
+    tristate "STMicroelectronics LSM6DS0 and LSM6DL0"
+	depends on I2C
+	help
+		Say Y here to enable STMicroelectronics LSM6DS0 or LSM6DL0inertial module.
+
+		To compile this driver as a module, choose M here: the
+		module will be called lsm6dx0.
+
+if NUBIA_SENSORS_LSM6DX0
+
+	choice
+	    prompt "LSM6DS0 or LSM6DL0"
+		default SENSORS_LSM6DX0_S_MODEL
+
+	config SENSORS_LSM6DX0_S_MODEL
+	    boolean "LSM6DS0"
+		depends on NUBIA_SENSORS_LSM6DX0
+		help
+		    Select this to enable the LSM6DS0 model to be supported.
+	config SENSORS_LSM6DX0_L_MODEL
+	    boolean "LSM6DL0"
+		depends on NUBIA_SENSORS_LSM6DX0
+		select SENSORS_LSM6DX0_LP
+		help
+		    Select this to enable the LSM6DS0 model to be supported.
+    endchoice
+
+	config SENSORS_LSM6DX0_SW_COMP
+	    bool "STMicroelectronics LSM6DS0 Software temperature compensation"
+	    help
+		    Say Y here to enable software temperature compensation and disable hardware one.
+	config SENSORS_LSM6DX0_LP
+	    bool "STMicroelectronics LSM6DS0 Enable Gyroscpe Low Power mode"
+		help
+		    Say Y here to enable Low Power mode.
+endif
 if ACPI
 
 comment "ACPI drivers"
