ARM: dts: nx512j: import nx512j board files
Change-Id: I38cb6c5d51eeb1e0548c5ef5f43c6a6986bf6e32

--- a/arch/arm/boot/dts/qcom/msm-pm8916.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm8916.dtsi
@@ -43,12 +43,13 @@
 				qcom,s2-type = <1>;
 				linux,code = <116>;
 			};
-
+/* removed nx512j have independent volume down key.
 			qcom,pon_2 {
 				qcom,pon-type = <1>;
 				qcom,pull-up = <1>;
 				linux,code = <114>;
 			};
+*/
 		};
 
 		pm8916_mpps: mpps {
@@ -117,7 +118,7 @@
                         #address-cells = <1>;
                         #size-cells = <1>;
                         qcom,qpnp-rtc-write = <0>;
-                        qcom,qpnp-rtc-alarm-pwrup = <0>;
+                        qcom,qpnp-rtc-alarm-pwrup = <1>;
 
                         qcom,pm8916_rtc_rw@6000 {
                                 reg = <0x6000 0x100>;
@@ -207,13 +208,13 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
-			qcom,vddmax-mv = <4200>;
-			qcom,vddsafe-mv = <4200>;
-			qcom,vinmin-mv = <4308>;
+			qcom,vddmax-mv = <4350>;  //ZTEMT_CHARGER 4200 --> 4350
+			qcom,vddsafe-mv = <4350>;  //ZTEMT_CHARGER 4200 --> 4350
+			qcom,vinmin-mv = <4350>;  //ZTEMT_CHARGER 4200 --> 4350
 			qcom,ibatsafe-ma = <1440>;
 			qcom,thermal-mitigation = <1440 720 630 0>;
-			qcom,cool-bat-decidegc = <100>;
-			qcom,warm-bat-decidegc = <450>;
+			qcom,cool-bat-decidegc = <50>;  //ZTEMT_CHARGER 100 --> -50
+			qcom,warm-bat-decidegc = <520>;  //ZTEMT_CHARGER 450 --> 520
 			qcom,cool-bat-mv = <4100>;
 			qcom,warm-bat-mv = <4100>;
 			qcom,ibatmax-warm-ma = <360>;
@@ -221,6 +222,7 @@
 			qcom,batt-hot-percentage = <25>;
 			qcom,batt-cold-percentage = <80>;
 			qcom,tchg-mins = <232>;
+			qcom,resume-soc = <99>;
 			qcom,chg-vadc = <&pm8916_vadc>;
 			qcom,chg-adc_tm = <&pm8916_adc_tm>;
 
@@ -269,15 +271,15 @@
 			status = "disabled";
 
 			qcom,v-cutoff-uv = <3400000>;
-			qcom,max-voltage-uv = <4200000>;
+			qcom,max-voltage-uv = <4350000>;  //ZTEMT_CHARGER 4200000 --> 4350000
 			qcom,r-conn-mohm = <0>;
-			qcom,shutdown-soc-valid-limit = <100>;
+			qcom,shutdown-soc-valid-limit = <30>;  //ZTEMT_CHARGER 100 --> 30
 			qcom,low-soc-calculate-soc-threshold = <15>;
 			qcom,low-voltage-calculate-soc-ms = <1000>;
 			qcom,low-soc-calculate-soc-ms = <5000>;
 			qcom,calculate-soc-ms = <20000>;
 			qcom,volatge-soc-timeout-ms = <60000>;
-			qcom,low-voltage-threshold = <3450000>;
+			qcom,low-voltage-threshold = <3420000>; //ZTEMT_CHARGER 3450000 --> 3420000
 			qcom,s3-ocv-tolerence-uv = <1200>;
 			qcom,s2-fifo-length = <5>;
 			qcom,low-soc-fifo-length = <2>;
@@ -288,7 +290,6 @@
 			qcom,force-s3-on-suspend;
 			qcom,force-s2-in-charging;
 			qcom,report-charger-eoc;
-			qcom,resume-soc = <99>;
 
 			qcom,batt-pres-status@1208 {
 				reg = <0x1208 0x1>;
