--- a/arch/arm/boot/dts/qcom/msm8939-camera-sensor-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-camera-sensor-mtp.dtsi
@@ -21,13 +21,13 @@
 		reg = <0x0>;
 		compatible = "qcom,actuator";
 		qcom,cci-master = <0>;
-		cam_vaf-supply = <&pm8916_l10>;
+		/*cam_vaf-supply = <&pm8916_l10>;
 		qcom,cam-vreg-name = "cam_vaf";
 		qcom,cam-vreg-min-voltage = <2800000>;
 		qcom,cam-vreg-max-voltage = <2800000>;
-		qcom,cam-vreg-op-mode = <80000>;
+		qcom,cam-vreg-op-mode = <80000>;*/
 	};
-
+/*
 	qcom,camera@78 {
 		compatible = "ovti,ov5645";
 		reg = <0x78 0x0>;
@@ -212,7 +212,7 @@
 		qcom,poll1 = <0 0x0 2 0x0 1 0>;
 		qcom,mem1 = <3 0x0F10 2 0 1 0>;
 
-		/* bpc: insensor bpc */
+		// bpc: insensor bpc 
 		qcom,saddr2 = <0x5A>;
 		qcom,page2 = <1 0x6028 2 0x4000 2 0>;
 		qcom,poll2 = <0 0x0 2 0x0 2 0>;
@@ -373,8 +373,31 @@
 		clocks = <&clock_gcc clk_mclk0_clk_src>,
 				<&clock_gcc clk_gcc_camss_mclk0_clk>;
 		clock-names = "cam_src_clk", "cam_clk";
-	};
+	};*/
 
+	led_flash0: qcom,led-flash@63 {
+		cell-index = <0>;
+		reg = <0x63>;
+		qcom,slave-id = <0xC6 0x00 0x0011>;
+		compatible = "ti-flash,lm3642";
+		label = "lm3642";
+		qcom,flash-type = <1>;
+		qcom,gpio-no-mux = <0>;
+		qcom,enable_pinctrl;
+		pinctrl-names = "cam_flash_default", "cam_flash_suspend";
+		pinctrl-0 = <&cam_sensor_flash_default>;
+		pinctrl-1 = <&cam_sensor_flash_sleep>;
+		gpios = <&msm_gpio 32 0>,
+			<&msm_gpio 31 0>;
+		qcom,gpio-flash-en = <0>;
+		qcom,gpio-flash-now = <1>;
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <0 0>;
+		qcom,gpio-req-tbl-label = "FLASH_EN",
+			"FLASH_NOW";
+		qcom,cci-master = <0>;
+	};
+	
 	qcom,camera@0 {
 		cell-index = <0>;
 		compatible = "qcom,camera";
@@ -383,30 +406,35 @@
 		qcom,csid-sd-index = <0>;
 		qcom,mount-angle = <90>;
 		qcom,actuator-src = <&actuator0>;
-		qcom,eeprom-src = <&eeprom0 &eeprom1>;
 		cam_vdig-supply = <&pm8916_s4>;
-		cam_vana-supply = <&pm8916_l17>;
-		cam_vio-supply = <&pm8916_l6>;
 		cam_vaf-supply = <&pm8916_l10>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana",
-							"cam_vaf";
-		qcom,cam-vreg-min-voltage = <2100000 0 2850000 2800000>;
-		qcom,cam-vreg-max-voltage = <2100000 0 2850000 2800000>;
-		qcom,cam-vreg-op-mode = <200000 0 80000 100000>;
+		qcom,cam-vreg-name = "cam_vdig", "cam_vaf";
+		qcom,cam-vreg-min-voltage = <1850000 2800000>;
+		qcom,cam-vreg-max-voltage = <1850000 2800000>;
+		qcom,cam-vreg-op-mode = <300000 150000>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_default
 				&cam_sensor_rear_default>;
 		pinctrl-1 = <&cam_sensor_mclk0_sleep &cam_sensor_rear_sleep>;
 		gpios = <&msm_gpio 26 0>,
 			<&msm_gpio 35 0>,
-			<&msm_gpio 34 0>;
+			<&msm_gpio 34 0>,
+			<&msm_gpio 1 0>,
+			<&msm_gpio 3 0>,
+			<&msm_gpio 0 0>;
 		qcom,gpio-reset = <1>;
 		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
+		qcom,gpio-vdig = <3>;
+		qcom,gpio-vana = <4>;
+		qcom,gpio-vio = <5>;
+		qcom,gpio-req-tbl-num = <0 1 2 3 4 5>;
+		qcom,gpio-req-tbl-flags = <1 0 0 0 0 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK0",
 			"CAM_RESET0",
-			"CAM_STANDBY0";
+			"CAM_STANDBY0",
+			"CAM_VDIG0",
+			"CAM_VANA0",
+			"CAM_VIO0";
 		qcom,sensor-position = <0>;
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
@@ -422,29 +450,34 @@
 		reg = <0x1>;
 		qcom,csiphy-sd-index = <1>;
 		qcom,csid-sd-index = <1>;
-		qcom,mount-angle = <90>;
+		qcom,mount-angle = <270>;
 		cam_vdig-supply = <&pm8916_s4>;
-		cam_vana-supply = <&pm8916_l17>;
-		cam_vio-supply = <&pm8916_l6>;
-		cam_vaf-supply = <&pm8916_l10>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana",
-							"cam_vaf";
-		qcom,cam-vreg-min-voltage = <2100000 0 2850000 2800000>;
-		qcom,cam-vreg-max-voltage = <2100000 0 2850000 2800000>;
-		qcom,cam-vreg-op-mode = <200000 0 80000 100000>;
+		qcom,cam-vreg-name = "cam_vdig";
+		qcom,cam-vreg-min-voltage = <1850000>;
+		qcom,cam-vreg-max-voltage = <1850000>;
+		qcom,cam-vreg-op-mode = <300000>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_default &cam_sensor_front_default>;
 		pinctrl-1 = <&cam_sensor_mclk1_sleep &cam_sensor_front_sleep>;
 		gpios = <&msm_gpio 27 0>,
 			<&msm_gpio 28 0>,
-			<&msm_gpio 33 0>;
+			<&msm_gpio 33 0>,
+			<&msm_gpio 109 0>,
+			<&msm_gpio 2  0>,
+			<&msm_gpio 16 0>;
 		qcom,gpio-reset = <1>;
 		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
+		qcom,gpio-vdig = <3>;
+		qcom,gpio-vana = <4>;
+		qcom,gpio-vio = <5>;
+		qcom,gpio-req-tbl-num = <0 1 2 3 4 5>;
+		qcom,gpio-req-tbl-flags = <1 0 0 0 0 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK1",
 			"CAM_RESET1",
-			"CAM_STANDBY1";
+			"CAM_STANDBY1",
+			"CAM_VDIG1",
+			"CAM_VANA1",
+			"CAM_VIO1";
 		qcom,sensor-position = <1>;
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
