--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -11,6 +11,18 @@
  */
 
 / {
+	memory {
+		pstore_reserve_mem: pstore_reserve_region@0 {
+			linux,reserve-contiguous-region;
+			linux,reserve-region;
+			linux,remove-completely;
+			reg = <0x0 0x8c400000 0x0 0x00200000>;
+			label = "pstore_reserve_mem";
+		};
+	};
+};
+
+/ {
 	interrupt-parent = <&intc>;
 	aliases {
 		sdhc1 = &sdhc_1; /* SDC1 eMMC slot */
@@ -103,6 +115,19 @@
 		};
 	};
 
+	ramoops {
+		compatible = "ramoops";
+		status = "ok";
+
+		/* This is tacked at the end of pheripheral_region@0 */
+		android,ramoops-buffer-start = <0x8c400000>;
+		android,ramoops-buffer-size = <0x200000>;
+		android,ramoops-console-size = <0x80000>;
+		android,ramoops-record-size = <0x20000>;
+		android,ramoops-ftrace-size = <0x10000>;
+		android,ramoops-pmsg-size = <0x80000>;
+		android,ramoops-dump-oops = <0x1>;
+	};
 	soc: soc { };
 };
 
