--- a/arch/arm64/configs/lineageos_nx512j_defconfig
+++ b/arch/arm64/configs/lineageos_nx512j_defconfig
@@ -5,6 +5,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_IKCONFIG=y
+CONFIG_LEGACY_IOCTL=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
