--- a/drivers/media/platform/msm/camera_v2/Kconfig
+++ b/drivers/media/platform/msm/camera_v2/Kconfig
@@ -268,6 +268,11 @@ config MSM_GEMINI
 	---help---
 	  Enables support for the Gemini JPEG encoder engine for 8x60.
 
+config LEGACY_IOCTL
+	bool "legacy ioctl"
+	---help---
+	  bypasses camif and epoch_irq support for old camera drivers
+
 config N958ST_CAMERA
 	bool "zte N958St camera"
 
